--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -29,8 +29,11 @@ jobs:
         run: |
           pnpm install
           pnpm run build
-          mv ./build/static ./build/standalone/build # Ensure these paths are correct
+          mv ./build/static ./build/standalone/build
           mv ./public ./build/standalone
+          
+      - name: List build directory contents
+        run: ls -R ./build
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,4 +49,4 @@ jobs:
           app-name: ${{ env.app-service-name }}
           slot-name: "Production"
           publish-profile: ${{ env.APPLICATION_PUBLISH_PROFILE }}
-          package: ./build/standalone # Ensure this path is correct
+          package: ./build/standalone
