--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -35,12 +35,24 @@ jobs:
       - name: List build directory contents
         run: ls -R ./build
 
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: webapp
+          path: ${{ env.working-directory }}/publish
+          retention-days: 1
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: webapp
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
