--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -38,26 +38,6 @@ jobs:
         run: ls -R ${{ env.working-directory }}/build
         working-directory: ${{ env.working-directory }}
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: webapp
-          path: ${{ env.working-directory }}/build/standalone
-          retention-days: 1
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: webapp
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -65,4 +45,33 @@ jobs:
           app-name: ${{ env.app-service-name }}
           slot-name: production
           publish-profile: ${{ env.APPLICATION_PUBLISH_PROFILE }}
-          package: ${{ env.working-directory }}/build/standalone/build
+          package: ${{ env.working-directory }}/build/standalone
+
+      # - name: Upload build artifacts
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: webapp
+      #     path: ${{ env.working-directory }}/build/standalone
+      #     retention-days: 1
+
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+
+  #     - name: Download build artifacts
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: webapp
+
+  #     - name: Deploy to Azure Web App
+  #       id: deploy-to-webapp
+  #       uses: azure/webapps-deploy@v3
+  #       with:
+  #         app-name: ${{ env.app-service-name }}
+  #         slot-name: production
+  #         publish-profile: ${{ env.APPLICATION_PUBLISH_PROFILE }}
+  #         package: ${{ env.working-directory }}/build/standalone
