--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -38,6 +38,29 @@ jobs:
         run: ls -R ${{ env.working-directory }}/build
         working-directory: ${{ env.working-directory }}
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: webapp
+          path: ${{ env.working-directory }}/build/standalone
+          retention-days: 1
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: webapp
+
+      - name: List downloaded directory contents
+        run: ls -R ${{ env.working-directory }}/build/standalone
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -46,32 +69,3 @@ jobs:
           slot-name: production
           publish-profile: ${{ env.APPLICATION_PUBLISH_PROFILE }}
           package: ${{ env.working-directory }}/build/standalone
-
-      # - name: Upload build artifacts
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: webapp
-      #     path: ${{ env.working-directory }}/build/standalone
-      #     retention-days: 1
-
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Download build artifacts
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: webapp
-
-  #     - name: Deploy to Azure Web App
-  #       id: deploy-to-webapp
-  #       uses: azure/webapps-deploy@v3
-  #       with:
-  #         app-name: ${{ env.app-service-name }}
-  #         slot-name: production
-  #         publish-profile: ${{ env.APPLICATION_PUBLISH_PROFILE }}
-  #         package: ${{ env.working-directory }}/build/standalone
