--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -35,14 +35,14 @@ jobs:
         working-directory: ${{ env.working-directory }}
 
       - name: List build directory contents
-        run: ls -R ${{ env.working-directory }}/build
+        run: ls -R ${{ env.working-directory }}
         working-directory: ${{ env.working-directory }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: webapp
-          path: ${{ env.working-directory }}/build/standalone
+          path: ${{ env.working-directory }}/build
           retention-days: 1
 
   deploy:
