--- a/.github/workflows/deploy-simple.yml
+++ b/.github/workflows/deploy-simple.yml
@@ -59,7 +59,8 @@ jobs:
           name: webapp
 
       - name: List downloaded directory contents
-        run: ls -R ${{ env.working-directory }}/build/standalone
+        run: ls -R ${{ env.working-directory }}
+        working-directory: ${{ env.working-directory }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
